Fixed some strange backend layout issues (ticket #722)
git-svn-id: svn://isteam.dynxs.de/wb_svn/wb280/trunk@982 98bf1eab-f5fc-0310-a3ed-aac8851f7404

--- a/wb/modules/form/backend.css
+++ b/wb/modules/form/backend.css
@@ -1,5 +1,10 @@
 .setting_name {
 	vertical-align: top;
+	width: 30%;
+}
+.setting_value {
+	vertical-align: top;
+	width: 70%;
 }
 .newsection {
 	border-top: 1px dashed #fff;
